--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "jest --watch"
+    "test": "jest --watch --runInBand"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
+  "dependencies": {
+    "typeorm": "^0.3.20"
+  },
   "devDependencies": {
     "@eslint/js": "^9.12.0",
     "@types/jest": "^29.5.13",
@@ -17,6 +20,7 @@
     "eslint-plugin-prettier": "^5.2.1",
     "globals": "^15.11.0",
     "jest": "^29.7.0",
-    "prettier": "^3.3.3"
+    "prettier": "^3.3.3",
+    "sqlite3": "^5.1.7"
   }
 }
